<resources>
    <string name="app_name">Bill calculator</string>
    <string name="bill_creation">Bill Creation</string>
    <string name="bill_result">Bill Result</string>
    <string name="all_bills">All Bills</string>
    <string name="number_of_persons_in_this_bill">Number of persons in this bill</string>
    <string name="sharing_between_all_persons_in_the_bill">Sharing between all persons in the bill</string>
    <string name="taxes">taxes</string>
    <string name="services">Services</string>
    <string name="delivery">Delivery</string>
    <string name="create_bill">Create bill</string>
    <string name="calculate">Calculate</string>
    <string name="add_new_item">Add new item</string>
    <string name="item_name">Item name</string>
    <string name="item_price">Item price</string>
    <string name="username">Username</string>
    <string name="total_cost">Total cost</string>
    <string name="bill_name">Bill name</string>
    <string name="no_of_person_greater_than_zero">No of person must be greater than 0</string>
    <string name="no_of_is_empty">Please fill in no of persons in bill</string>
    <string name="error_title">Error</string>
    <string name="ok">Ok</string>
    <string name="no_bills">No bills</string>
    <string name="all_users">n</string>
</resources>