<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/twoUnits"
    tools:context=".ui.bill_creation.BillCreationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_creation"
                android:textColor="@color/indigo_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bill_name_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twoUnits"
                android:hint="@string/bill_name"
                app:layout_constraintTop_toBottomOf="@id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>
            <!--            number of people container-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/no_of_people_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twoUnits"
                android:hint="@string/number_of_persons_in_this_bill"
                app:layout_constraintTop_toBottomOf="@id/bill_name_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/no_of_people_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="1234567890"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/twoUnits"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/no_of_people_layout" />

            <!--            sharing things between all persons in bill-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sharing_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twoUnits"
                app:layout_constraintTop_toBottomOf="@id/divider">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sharing_header"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sharing_between_all_persons_in_the_bill"
                    android:textColor="@color/indigo_500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/oneUnit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sharing_header">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/taxes_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taxes"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/services_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/oneUnit"
                        android:text="@string/services"
                        app:layout_constraintStart_toEndOf="@id/taxes_checkbox"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/delivery_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/oneUnit"
                        android:text="@string/delivery"
                        app:layout_constraintStart_toEndOf="@id/services_checkbox"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createBillButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/oneUnit"
                android:text="@string/create_bill"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sharing_container" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>