<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/twoUnits"
    tools:context=".ui.bill_calculator.BillCalculatorFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/header_sharing_all"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharing_between_all_persons_in_the_bill"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!--            taxes-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taxes_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/oneUnit"
                android:hint="@string/taxes"
                app:layout_constraintTop_toBottomOf="@id/header_sharing_all">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits=".0123456789"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--            services-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/services_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/oneUnit"
                android:hint="@string/services"
                app:layout_constraintTop_toBottomOf="@id/taxes_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits=".0123456789"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--            Delivery-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/delivery_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/oneUnit"
                android:hint="@string/services"
                app:layout_constraintTop_toBottomOf="@id/services_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits=".0123456789"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/twoUnits"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/delivery_input_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/persons_in_bill"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/twoUnits"
                app:layout_constraintTop_toBottomOf="@id/divider" />


            <!--            sharing item -->


            <com.google.android.material.button.MaterialButton
                android:id="@+id/calculate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twoUnits"
                android:text="@string/calculate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/persons_in_bill" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>